cmake_minimum_required(VERSION 3.15)
project(c_lanague)

set(CMAKE_CXX_STANDARD 11)

add_executable(c_lanague main.cpp chapter01/chapter01.h chapter01/chapter01.cpp chapter02/chapter02.cpp chapter02/chapter02.h chapter03/chapter03.cpp chapter03/chapter03.h chapter04/chapter04.cpp chapter04/chapter04.h chapter05/chapter05.cpp chapter05/chapter05.h chapter06/chapter06.cpp chapter06/chapter06.h chapter07/chapter07.cpp chapter07/chapter07.h chapter08/chapter08.cpp chapter08/chapter08.h chapter10/chapter10.cpp chapter10/chapter10.h chapter11/chapter11.cpp chapter11/chapter11.h chapter13/chapter13.cpp chapter13/chapter13.h)