cmake_minimum_required(VERSION 3.15)
project(c_lanague)

set(CMAKE_CXX_STANDARD 11)

add_executable(c_lanague main.cpp base/chapter01/chapter01.h base/chapter01/chapter01.cpp base/chapter02/chapter02.cpp base/chapter02/chapter02.h base/chapter03/chapter03.cpp base/chapter03/chapter03.h base/chapter04/chapter04.cpp base/chapter04/chapter04.h base/chapter05/chapter05.cpp base/chapter05/chapter05.h base/chapter06/chapter06.cpp base/chapter06/chapter06.h base/chapter07/chapter07.cpp base/chapter07/chapter07.h base/chapter08/chapter08.cpp base/chapter08/chapter08.h base/chapter10/chapter10.cpp base/chapter10/chapter10.h base/chapter11/chapter11.cpp base/chapter11/chapter11.h base/chapter13/chapter13.cpp base/chapter13/chapter13.h data_structure/list/sq_list.cpp headers/data_structure/sq_list.h invokers/base.cpp)